--- a/sistemasexp.html
+++ b/sistemasexp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Home</title>
+    <title>Exemplos</title>
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             <a href="index.html">Sistema e Kernel</a>
             <a href="sistemasexp.html">Exemplos de Sistema Operacionais</a>
             <a href="interface.html">CLI e GUI</a>
-            <a href="gitbash.html">Comandos do Linus no Git Bash</a>
+            <a href="gitbash.html">Comandos do Linux no Git Bash</a>
             <a href="CMD.html">Comandos no CMD</a>
             <a href="versionamento.html">Versionamento</a>
             <a href="repositorio.html">Repositorio</a>
@@ -23,7 +23,13 @@
         <h1>Exemplos de sistema operacional: </h1>
         <article>
             <h2>Windows</h2>
-            <p></p>
+            <p>O sistema operacional Windows é o mais usado <br> mundialmente, tendo 68,15% dos computadores <br>mundialmente, por causa da sua facilidade de se usar</p>
+            <img src="logo_windows.png" alt="">
+        </article>
+        <article>
+            <h2>Mac</h2>
+            <p>O sistema mac feito pela apple, é o sistema menos usado, <br> tendo so 21,38% nos computadores mundialmente, mas isso <br> não significa que seja, ja que o sistema mac têm alta capacidade de <br> processamento.</p>
+            <img src="logo_macos.png" alt="" width="350px" height="300px">
         </article>
     </main>
     <footer>
