--- a/gitbash.html
+++ b/gitbash.html
@@ -12,7 +12,7 @@
             <a href="index.html">Sistema e Kernel</a>
             <a href="sistemasexp.html">Exemplos de Sistema Operacionais</a>
             <a href="interface.html">CLI e GUI</a>
-            <a href="gitbash.html">Comandos do Linus no Git Bash</a>
+            <a href="gitbash.html">Comandos do Linux no Git Bash</a>
             <a href="CMD.html">Comandos no CMD</a>
             <a href="versionamento.html">Versionamento</a>
             <a href="repositorio.html">Repositorio</a>
@@ -20,7 +20,20 @@
         </nav>
     </header>
     <main>
-
+        <h1>Comandos do Git Bash</h1>
+        <article>
+            <p>O que é Git Bash? É um terminal para <br> sistema Windows de comandos em linha.</p>
+        </article>
+        <article>
+            <h2>LS</h2>
+            <p>O comando <span>LS</span> é um comando para ver todos os arquivos <br> e pasta da pasta atual</p>
+            <img src="gitcomandos.png" alt="" width="1200" height="300">
+        </article>
+        <article>
+            <h2>CD</h2>
+            <p>O comando <span>CD</span> é um comando que faz entrar numa <br>pasta especifica ou sair de uma com ".."</p>
+            <img src="cdgitbash.png" alt="">
+        </article>
     </main>
     <footer>
         <hr>
