--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="index.html">Sistema e Kernel</a>
             <a href="sistemasexp.html">Exemplos de Sistema Operacionais</a>
             <a href="interface.html">CLI e GUI</a>
-            <a href="gitbash.html">Comandos do Linus no Git Bash</a>
+            <a href="gitbash.html">Comandos do Linux no Git Bash</a>
             <a href="CMD.html">Comandos no CMD</a>
             <a href="versionamento.html">Versionamento</a>
             <a href="repositorio.html">Repositorio</a>
