--- a/CMD.html
+++ b/CMD.html
@@ -20,7 +20,20 @@
         </nav>
     </header>
     <main>
-
+        <h1>Comandos do CMD</h1>
+        <article>
+            <p>O cmd apresenta uma interface de linha de comando baseada em texto <br> para realizar operações como navegar por pastas, copiar ou mover arquivos,<br> executar aplicativos e personalizar as configurações do sistema — tudo por comandos de texto.</p>
+        </article>
+        <article>
+            <h1>DIR</h1>
+            <p>O comando <span>DIR</span> mostra todos os arquivos e pastas na pasta atual</p>
+            <img src="dircmd.png" alt="" width="450" height="300">
+        </article>
+        <article>
+            <h2>REN</h2>
+            <p>O comando <span>REN</span> é utilizado para mudar o nome de um arquivo especifico</p>
+            <img src="REN.png" alt="" width="450" height="300">
+        </article>
     </main>
     <footer>
         <hr>
