--- a/gitbash.html
+++ b/gitbash.html
@@ -32,7 +32,7 @@
         <article>
             <h2>CD</h2>
             <p>O comando <span>CD</span> é um comando que faz entrar numa <br>pasta especifica ou sair de uma com ".."</p>
-            <img src="cdgitbash.png" alt="">
+            <img src="cdgitbash.png" alt="" width="1200" height="100">
         </article>
     </main>
     <footer>
