--- a/CMD.html
+++ b/CMD.html
@@ -26,12 +26,12 @@
         </article>
         <article>
             <h1>DIR</h1>
-            <p>O comando <span>DIR</span> mostra todos os arquivos e pastas na pasta atual</p>
+            <p>O comando <span class="destaque">DIR</span> mostra todos os arquivos e pastas na pasta atual</p>
             <img src="dircmd.png" alt="" width="450" height="300">
         </article>
         <article>
             <h2>REN</h2>
-            <p>O comando <span>REN</span> é utilizado para mudar o nome de um arquivo especifico</p>
+            <p>O comando <span class="destaque">REN</span> é utilizado para mudar o nome de um arquivo especifico</p>
             <img src="REN.png" alt="" width="450" height="300">
         </article>
     </main>
