--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <main>
         <h1>O que é o sistema operacional?</h1>
         <article>
-            <p><span>O Sistema Operacional</span> é o conjunto de programas que gerenciam recursos, processadores,<br> armazenamento, dispositivos de entrada e saída e dados da máquina e seus periféricos</p>
+            <p><span class="destaque">O Sistema Operacional</span> é o conjunto de programas que gerenciam recursos, processadores,<br> armazenamento, dispositivos de entrada e saída e dados da máquina e seus periféricos</p>
             <img src="sistema_operacional.jpg" alt="" width="300px" height="300px">
         </article>
         <article>
             <h2>O que é o kernel </h2>
-            <p><span>O Kernal</span> núcleo do sistema, é responsável por conectar o software ao hardware. Desta forma,<br> ele estabelece uma comunicação eficaz entre os recursos do sistema operacional e administra suas funções. </p>
+            <p><span class="destaque">O Kernal</span> núcleo do sistema, é responsável por conectar o software ao hardware. Desta forma,<br> ele estabelece uma comunicação eficaz entre os recursos do sistema operacional e administra suas funções. </p>
             <img src="kernel_didatico.png" alt="">
         </article>
     </main>
