--- a/versionamento.html
+++ b/versionamento.html
@@ -20,7 +20,12 @@
         </nav>
     </header>
     <main>
-
+        <h1>Versionamento</h1>
+        <article>
+            <h2>O que é?</h2>
+            <p>Um sistema de <spam class="destaque">versionamento</spam> permite que várias pessoas trabalhem no mesmo conjunto de arquivos <br> (repositório) ao mesmo tempo em que evita conflitos entre as alterações. Cada membro do time de desenvolvimento <br>tem sua “cópia” dos arquivos que ao final das alterações é colocada junto das versões alteradas dos demais.</p>
+            <img src="imagem_versionamento.png" alt="">
+        </article>
     </main>
     <footer>
         <hr>
