--- a/repositorio.html
+++ b/repositorio.html
@@ -23,7 +23,7 @@
         <h1>Repositorio</h1>
         <h2>O oque é?</h2>
         <p>O <span class="destaque">Repositorio</span> é um lugar onde você pode armazenar <br> seu código, seus arquivos e o histórico de revisão de cada arquivo.</p>
-        <img src="img_repositorio.png" alt="">
+        <img src="img_repositorio.png" alt="" height="300" width="550">
     </main>
     <footer>
         <hr>
