--- a/deploy.html
+++ b/deploy.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
+<div class="principal"></div>
 <body>
     <header>
         <nav>
@@ -25,12 +26,16 @@
             <h2>O que é?</h2>
             <p>O termo deploy poder ser definido como um processo de implementação do código <br>(html, css, Javascript, etc) do controle de origem ou artefatos de origem para uma plataforma de hospedagem. <br>Ele também pode ser manual, parcialmente ou totalmente automatizado.</p>
             <img src="deploy1.png" alt="">
+        </article>
+            <article>
             <img src="deploy2.png" alt="">
         </article>
+       
     </main>
     <footer>
         <hr>
         <small>Autor: Mateus Queiroz Logrado &reg; &trade;</small>
     </footer>
 </body>
+</div>
 </html>
