--- a/sistemasexp.html
+++ b/sistemasexp.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Exemplos</title>
 </head>
+<div class="principal"></div>
 <body>
     <header>
         <nav>
@@ -23,12 +24,12 @@
         <h1>Exemplos de sistema operacional: </h1>
         <article>
             <h2>Windows</h2>
-            <p>O sistema operacional Windows é o mais usado <br> mundialmente, tendo 68,15% dos computadores <br>mundialmente, por causa da sua facilidade de se usar</p>
+            <p>O sistema operacional <span class="destaque">Windows</span> é o mais usado <br> mundialmente, tendo 68,15% dos computadores <br>mundialmente, por causa da sua facilidade de se usar</p>
             <img src="logo_windows.png" alt="">
         </article>
         <article>
             <h2>Mac</h2>
-            <p>O sistema mac feito pela apple, é o sistema menos usado, <br> tendo so 21,38% nos computadores mundialmente, mas isso <br> não significa que seja, ja que o sistema mac têm alta capacidade de <br> processamento.</p>
+            <p>O sistema <span class="destaque">MacOS</span> feito pela apple, é o sistema menos usado, <br> tendo so 21,38% nos computadores mundialmente, mas isso <br> não significa que seja, ja que o sistema mac têm alta capacidade de <br> processamento.</p>
             <img src="logo_macos.png" alt="" width="350px" height="300px">
         </article>
     </main>
@@ -37,4 +38,5 @@
         <small>Autor: Mateus Queiroz Logrado &reg; &trade;</small>
     </footer>
 </body>
+</div>
 </html>
