--- a/CMD.html
+++ b/CMD.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
+<div class="principal">
 <body>
     <header>
         <nav>
@@ -40,4 +41,5 @@
         <small>Autor: Mateus Queiroz Logrado &reg; &trade;</small>
     </footer>
 </body>
+</div>
 </html>
