--- a/versionamento.html
+++ b/versionamento.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
+<div class="principal"></div>
 <body>
     <header>
         <nav>
@@ -32,4 +33,5 @@
         <small>Autor: Mateus Queiroz Logrado &reg; &trade;</small>
     </footer>
 </body>
+</div>
 </html>
