--- a/sistemasexp.html
+++ b/sistemasexp.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Exemplos</title>
 </head>
-<div class="principal"></div>
 <body>
+    <div class="corpo">
     <header>
         <nav>
             <a href="index.html">Sistema e Kernel</a>
@@ -37,6 +37,6 @@
         <hr>
         <small>Autor: Mateus Queiroz Logrado &reg; &trade;</small>
     </footer>
-</body>
 </div>
+</body>
 </html>
