--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
-<div class="principal"></div>
 <body>
+    <div class="corpo">
     <header>
         <nav>
             <a href="index.html">Sistema e Kernel</a>
@@ -36,6 +36,6 @@
         <hr>
         <small>Autor: Mateus Queiroz Logrado &reg; &trade;</small>
     </footer>
-</body>
 </div>
+</body>
 </html>
