--- a/CMD.html
+++ b/CMD.html
@@ -25,6 +25,7 @@
         <article>
             <p>O cmd apresenta uma interface de linha de comando baseada em texto <br> para realizar operações como navegar por pastas, copiar ou mover arquivos,<br> executar aplicativos e personalizar as configurações do sistema — tudo por comandos de texto.</p>
         </article>
+        <div class="flex">
         <article>
             <h1>DIR</h1>
             <p>O comando <span class="destaque">DIR</span> mostra todos os arquivos e pastas na pasta atual</p>
@@ -35,6 +36,7 @@
             <p>O comando <span class="destaque">REN</span> é utilizado para mudar o nome de um arquivo especifico</p>
             <img src="REN.png" alt="" width="450" height="300">
         </article>
+        </div>
     </main>
     <footer>
         <hr>
