--- a/deploy.html
+++ b/deploy.html
@@ -22,15 +22,13 @@
     </header>
     <main>
         <h1>Deploy</h1>
+        <div class="flex">
         <article>
             <h2>O que é?</h2>
             <p>O termo deploy poder ser definido como um processo de implementação do código <br>(html, css, Javascript, etc) do controle de origem ou artefatos de origem para uma plataforma de hospedagem. <br>Ele também pode ser manual, parcialmente ou totalmente automatizado.</p>
             <img src="deploy1.png" alt="">
         </article>
-            <article>
-            <img src="deploy2.png" alt="">
-        </article>
-       
+    </div>
     </main>
     <footer>
         <hr>
