--- a/gitbash.html
+++ b/gitbash.html
@@ -25,6 +25,7 @@
         <article>
             <p>O que é Git Bash? É um terminal para <br> sistema Windows de comandos em linha.</p>
         </article>
+        <div class="flex">
         <article>
             <h2>LS</h2>
             <p>O comando <span>LS</span> é um comando para ver todos os arquivos <br> e pasta da pasta atual</p>
@@ -35,6 +36,7 @@
             <p>O comando <span>CD</span> é um comando que faz entrar numa <br>pasta especifica ou sair de uma com ".."</p>
             <img src="cdgitbash.png" alt="" width="1200" height="100">
         </article>
+        </div>
     </main>
     <footer>
         <hr>
