--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
     <main>
         <h1>O que é o sistema operacional?</h1>
+        <div class="flex">
         <article>
             <p><span class="destaque">O Sistema Operacional</span> é o conjunto de programas que gerenciam recursos, processadores,<br> armazenamento, dispositivos de entrada e saída e dados da máquina e seus periféricos</p>
             <img src="sistema_operacional.jpg" alt="" width="300px" height="300px">
@@ -31,6 +32,7 @@
             <p><span class="destaque">O Kernal</span> núcleo do sistema, é responsável por conectar o software ao hardware. Desta forma,<br> ele estabelece uma comunicação eficaz entre os recursos do sistema operacional e administra suas funções. </p>
             <img src="kernel_didatico.png" alt="">
         </article>
+    </div>
     </main>
     <footer>
         <hr>
