--- a/repositorio.html
+++ b/repositorio.html
@@ -22,11 +22,13 @@
     </header>
     <main>
         <h1>Repositorio</h1>
+        <div class="flex">
         <article>
          <h2>O oque é?</h2>
          <p>O <span class="destaque">Repositorio</span> é um lugar onde você pode armazenar <br> seu código, seus arquivos e o histórico de revisão de cada arquivo.</p>
          <img src="img_repositorio.png" alt="" height="300" width="550">
         </article>
+    </div>
     </main>
     <footer>
         <hr>
