--- a/sistemasexp.html
+++ b/sistemasexp.html
@@ -22,9 +22,10 @@
     </header>
     <main>
         <h1>Exemplos de sistema operacional: </h1>
+        <div class="flex">
         <article>
             <h2>Windows</h2>
-            <p>O sistema operacional <span class="destaque">Windows</span> é o mais usado <br> mundialmente, tendo 68,15% dos computadores <br>mundialmente, por causa da sua facilidade de se usar</p>
+            <p>O sistema operacional <span class="destaque">Windows</span> é o mais usado <br> mundialmente, tendo 68,15% dos computadores <br>mundialmente, por causa da sua facilidade <br> de se usar</p>
             <img src="logo_windows.png" alt="">
         </article>
         <article>
@@ -32,6 +33,7 @@
             <p>O sistema <span class="destaque">MacOS</span> feito pela apple, é o sistema menos usado, <br> tendo so 21,38% nos computadores mundialmente, mas isso <br> não significa que seja, ja que o sistema mac têm alta capacidade de <br> processamento.</p>
             <img src="logo_macos.png" alt="" width="350px" height="300px">
         </article>
+        </div>
     </main>
     <footer>
         <hr>
