--- a/interface.html
+++ b/interface.html
@@ -22,6 +22,7 @@
     </header>
     <main>
         <h1>Interface CLI e GUI</h1>
+        <div class="flex">
         <article>
             <h2>CLI</h2>
             <p>CLI é a sigla de Command-Line Interface, que traduzido significa “Interface de Linha de Comando”. <br> As CLIs são uma forma de interação do usuário com o computador, que é feita através de comandos de <br> texto. O que possibilita a execução de várias tarefas.</p>
@@ -31,6 +32,8 @@
             <h2>GUI</h2>
             <p>a sigla GUI refere-se a denominação "Graphical User Interface" (Interface Gráfica do Usuário, em português),<br> que consiste em um modelo de interface do utilizador que permite a interação com os dispositivos digitais através de elementos gráficos.</p>
             <img src="GUI.jpg" alt="" width="450" height="300">
+        </article>
+        </div>
     </main>
     <footer>
         <hr>
